# it-is-unreal

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: MASTER_PLAN.md  mcp-client-config.json
plugin/GameplayHelpers/: GameplayHelpers.uplugin
plugin/UnrealMCP/: UnrealMCP.uplugin
server/: is_it_unreal.py  it_is_unreal.py  pyproject.toml
server/helpers/: actor_name_manager.py  actor_utilities.py  advanced_buildings.py  bridge_aqueduct_creation.py  building_creation.py  castle_creation.py  house_construction.py  infrastructure_creation.py  mansion_creation.py  tower_creation.py
server/helpers/blueprint_graph/: connector_manager.py  node_manager.py  node_properties.py  variable_manager.py
