[project]
name = "is-it-unreal"
version = "1.0.0"
description = "101-tool MCP server for controlling Unreal Engine from AI assistants"
readme = "../README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0",
  "pydantic>=2.6.1",
  "requests"
]

[project.scripts]
is-it-unreal = "is_it_unreal:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["is_it_unreal"]
packages = ["helpers", "helpers.blueprint_graph"]
