[project]
name = "it-is-unreal"
version = "1.0.0"
description = "123-tool MCP server for controlling Unreal Engine from AI assistants"
readme = {text = "123-tool MCP server for controlling Unreal Engine from AI assistants. See https://github.com/endlessblink/it-is-unreal for full documentation.", content-type = "text/plain"}
requires-python = ">=3.10,<3.14"
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0",
  "pydantic>=2.6.1",
  "requests"
]

[project.scripts]
it-is-unreal = "it_is_unreal:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["it_is_unreal"]
packages = ["helpers", "helpers.blueprint_graph"]
